# pothole

./: .gitignore  README.md
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
devel/.private/pothole/: .rosinstall  _setup_util.py  local_setup.sh
devel/.private/pothole/lib/pkgconfig/: pothole.pc
devel/.private/pothole/lib/pothole/: pothole
devel/.private/pothole/share/pothole/cmake/: potholeConfig.cmake
devel/lib/pkgconfig/: catkin_tools_prebuild.pc  pothole.pc
devel/lib/pothole/: pothole
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
devel/share/pothole/cmake/: potholeConfig-version.cmake  potholeConfig.cmake
logs/pothole/: build.cmake.000.log.stderr
src/brain_msgs/: CMakeLists.txt  package.xml
src/brain_msgs/msg/: AreaEvent.msg  BoundaryLine.msg  CenterLine.msg  EventLine.msg  EventSet.msg  FrameFd.msg  FusionObject.msg  FusionObjects.msg  Lane.msg  LineEvent.msg  LineSet.msg  Mission.msg  Object.msg  ObjectCovariance.msg  ObjectState.msg  Objects.msg  OnDemandRequest.msg  PointEvent.msg  Relation.msg  Road.msg  SpatialTrajectory.msg  TemporalTrajectory.msg  Trajectories.msg  Trajectory.msg  TrajectoryBoundary.msg
src/ndt/: CMakeLists.txt  package.xml
src/ndt/include/: data_type.hpp  ndt.hpp
src/ndt/launch/: ndt.launch
src/ndt/src/: main.cpp  ndt.cpp
src/pothole/: CMakeLists.txt  package.xml
src/pothole/include/: data_type.hpp  ndt.hpp  pothole.hpp  preprocess.hpp
src/pothole/launch/: pothole.launch
src/pothole/rviz/: pothole.rviz
src/pothole/src/: main.cpp  ndt.cpp  pothole.cpp  preprocess.cpp
src/preprocess/: CMakeLists.txt  package.xml
src/preprocess/include/: data_type.hpp  preprocess.hpp
src/preprocess/launch/: preprocess.launch
src/preprocess/rviz/: pothole.rviz
src/preprocess/src/: main.cpp  preprocess.cpp
src/ransac/: CMakeLists.txt  package.xml
src/ransac/include/: ransac.hpp
src/ransac/src/: main.cpp  ransac.cpp
src/ray_ground_filter/: CMakeLists.txt  package.xml  ray_ground_filter.cpp
src/ray_ground_filter/include/: ray_ground_filter.h
src/ray_ground_filter/launch/: ray_ground_filter.launch
